--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@primeuix/themes": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.11",
     "class-transformer": "^0.5.1",
     "electron-updater": "^6.3.9",
     "pinia": "^3.0.3",
     "postcss": "^8.5.6",
+    "primevue": "^4.3.6",
     "reflect-metadata": "^0.2.2",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-primeui": "^0.6.1",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
